Styling done on index

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -26,21 +26,16 @@
       </div>
     </div>
     <div class="body_wrapper">
-      <div class="post_wrapper">
-        <div class="top_line">
-          <span class="post_title">Title</span>
-          <input class="button" id="like" type="submit" name="" value="Like!">
+      <div class="login_wrapper">
+        <div class="username-entry">
+          <p>Login:</p>
+          <input type="text" name="" value="" placeholder="Username">
         </div>
-        <div class="username">
-          <span class="author">By: Guest</span>
+        <div class="password-entry">
+          <p>Password:</p>
+          <input type="password" name="" value="" placeholder="password">
         </div>
-        <div class="message">
-          <span>This is the message that is posted in the box here</span>
-        </div>
-        <div class="bot_line">
-          <span class="publish_date">Published: 06/30/2017 12:24</span>
-          <input class="button" id="delete" type="submit" name="" value="Delete">
-        </div>
+      </div>
     </div>
 
     <script src="/js/client.js" charset="utf-8"></script>
