--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,87 @@
-h1 {
-  color:blue;
+body{
+  font-size: 16px;
+  margin: 0px;
+  background-color: rgba(146, 201, 177, 1);
+}
+
+.links-wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+
+.links{
+  padding: 1% 5%;
+}
+a:link{
+  color: rgba(93, 81, 121, 1);
+}
+
+a:visited{
+  color:rgba(79, 117, 155, 1);
+}
+.title{
+  text-align: center;
+  font-size: 2.4rem;
+  margin-top: 2%;
+}
+
+.title h2{
+  margin-top: 1%;
+  padding-bottom: 2%;
+}
+
+.top-bar{
+  background-color: rgba(162, 250, 163, 1);
+  color: #2c3e50
+}
+
+/*End of the top nav bar styling*/
+
+.post_wrapper{
+  background-color:#ecf0f1;
+  color:#2c3e50
+}
+
+.body_wrapper{
+  font-size: 1.5rem;
+  padding:0% 10%;
+}
+
+.post_wrapper{
+  padding:2%;
+}
+
+.top_line, .bot_line{
+  display: flex;
+  justify-content: space-between;
+}
+.button{
+  width:80px;
+  height: 100px;
+}
+
+.post_title{
+  font-size: 2rem;
+}
+
+.author{
+  font-size:1.3rem;
+}
+
+.message{
+  font-size: 1.7rem;
+  padding:0.5% 0%;
+}
+
+.publish_date{
+  font-size: 1rem;
+  font-style: italic;
+}
+
+/*End of index styling*/
+
+.login_wrapper{
+  padding:2%;
+  background-color:#ecf0f1;
+  color:#2c3e50
 }
