--- a/views/newPost.mustache
+++ b/views/newPost.mustache
@@ -27,20 +27,7 @@
     </div>
     <div class="body_wrapper">
       <div class="post_wrapper">
-        <div class="top_line">
-          <span class="post_title">Title</span>
-          <input class="button" id="like" type="submit" name="" value="Like!">
-        </div>
-        <div class="username">
-          <span class="author">By: Guest</span>
-        </div>
-        <div class="message">
-          <span>This is the message that is posted in the box here</span>
-        </div>
-        <div class="bot_line">
-          <span class="publish_date">Published: 06/30/2017 12:24</span>
-          <input class="button" id="delete" type="submit" name="" value="Delete">
-        </div>
+        <textarea name="post" rows="8" cols="80"></textarea>
     </div>
 
     <script src="/js/client.js" charset="utf-8"></script>
