--- a/public/css/master.css
+++ b/public/css/master.css
@@ -10,7 +10,7 @@ body{
 }
 
 .links{
-  padding: 1% 5%;
+  padding: 1% 3%;
 }
 a:link{
   color: rgba(93, 81, 121, 1);
@@ -39,7 +39,8 @@ a:visited{
 
 .post_wrapper{
   background-color:#ecf0f1;
-  color:#2c3e50
+  color:#2c3e50;
+  padding:2%;
 }
 
 .body_wrapper{
@@ -47,9 +48,6 @@ a:visited{
   padding:0% 10%;
 }
 
-.post_wrapper{
-  padding:2%;
-}
 
 .top_line, .bot_line{
   display: flex;
@@ -79,9 +77,73 @@ a:visited{
 }
 
 /*End of index styling*/
+/*Start of login styling*/
 
 .login_wrapper{
   padding:2%;
+  margin:0% 39%;
   background-color:#ecf0f1;
   color:#2c3e50
+}
+
+.login_wrapper p{
+  margin:0%;
+}
+
+.password_entry p{
+  margin-top: 10%;
+}
+
+.login_fields{
+  width:180px;
+  height: 35px;
+  font-size: 1rem;
+}
+
+.login_buttons{
+  display: flex;
+  justify-content: space-between;
+}
+
+.login_button{
+  width: 77px;
+  height: 50px;
+  margin-top: 10%;
+  background-color: rgba(93, 81, 121, 1);
+  font-size: 1rem;
+  color:#ecf0f1;
+}
+
+/*End of login styles*/
+/*Start of new post styles*/
+
+.entry_wrapper{
+  background-color:#ecf0f1;
+  color:#2c3e50;
+  padding:2%;
+  margin: 0% 31%;
+}
+
+.entry_wrapper h2{
+  font-size:1.5rem;
+  margin:0px;
+}
+
+.entry_title input{
+  height: 30px;
+  width: 334px;
+  margin-bottom: 2%;
+  font-size: 1rem;
+}
+
+.entry_body textarea{
+  font-size: 1rem;
+}
+
+.entry_buttons button{
+  background-color: rgba(93, 81, 121, 1);
+  font-size: 1rem;
+  color:#ecf0f1;
+  width: 77px;
+  height: 45px;
 }
