--- a/views/login.mustache
+++ b/views/login.mustache
@@ -27,13 +27,21 @@
     </div>
     <div class="body_wrapper">
       <div class="login_wrapper">
-        <div class="username-entry">
+        <div class="username_entry">
           <p>Login:</p>
-          <input type="text" name="" value="" placeholder="Username">
+          <input type="text" class="login_fields" name="" value="" placeholder="Username" autofocus>
         </div>
-        <div class="password-entry">
+        <div class="password_entry">
           <p>Password:</p>
-          <input type="password" name="" value="" placeholder="password">
+          <input type="password" class="login_fields" name="" value="" placeholder="Password">
+        </div>
+        <div class="login_buttons">
+          <form class="" action="/login" method="post">
+            <button type="button" class="login_button" name="button" >Login</button>
+          </form>
+          <form class="" action="/signUp" method="post">
+            <button type="button" class="login_button" name="button">Sign Up!</button>
+          </form>
         </div>
       </div>
     </div>
