--- a/views/newPost.mustache
+++ b/views/newPost.mustache
@@ -26,8 +26,20 @@
       </div>
     </div>
     <div class="body_wrapper">
-      <div class="post_wrapper">
-        <textarea name="post" rows="8" cols="80"></textarea>
+      <div class="entry_wrapper">
+        <div class="entry_title">
+          <h2>Title:</h2>
+          <input type="text" name="" value="" placeholder="What's this about?">
+        </div>
+        <div class="entry_body">
+          <h2>What's on your mind?</h2>
+          <textarea name="entry" rows="4" cols="40"></textarea>
+        </div>
+        <div class="entry_buttons">
+          <form class="post" action="/fixme" method="post">
+            <button type="button" name="button">Post!</button>
+          </form>
+        </div>
     </div>
 
     <script src="/js/client.js" charset="utf-8"></script>
