--- a/views/index.mustache
+++ b/views/index.mustache
@@ -30,23 +30,27 @@
         <h2>Gabble</h2>
       </div>
     </div>
+
     <div class="body_wrapper">
+      {{#posts}}
       <div class="post_wrapper">
         <div class="top_line">
-          <span class="post_title">Title</span>
+          <span class="post_title">{{title}}</span>
           <input class="button" id="like" type="submit" name="" value="Like!">
         </div>
         <div class="username">
-          <span class="author">By: Guest</span>
+          <span class="author">By:{{user}}</span>
         </div>
         <div class="message">
-          <span>This is the message that is posted in the box here</span>
+          <span>{{body}}</span>
         </div>
         <div class="bot_line">
           <span class="publish_date">Published: 06/30/2017 12:24</span>
           <input class="button" id="delete" type="submit" name="" value="Delete">
         </div>
     </div>
+    {{/posts}}
+  </div>
 
     <script src="/js/client.js" charset="utf-8"></script>
   </body>
