Not sure what I did but it was yellow

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -46,7 +46,9 @@
         </div>
         <div class="bot_line">
           <span class="publish_date">Published: 06/30/2017 12:24</span>
-          <input class="button" id="delete" type="submit" name="" value="Delete">
+          <form class="" action="/deletePost" method="post">
+            <button type="submit" name="delButt" value='{{id}}'>Delete</button>
+          </form>
         </div>
     </div>
     {{/posts}}
