signup page not accessible and the delete is not confirming

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -46,8 +46,9 @@
         </div>
         <div class="bot_line">
           <span class="publish_date">Published: 06/30/2017 12:24</span>
-          <form class="" action="/deletePost" method="post">
+          <form class="delForm" action="/{{id}}/deletePost" method="post">
             <button type="submit" name="delButt" value='{{id}}'>Delete</button>
+            <!-- <input type="submit" name="" value="Delete"> -->
           </form>
         </div>
     </div>
