--- a/views/index.mustache
+++ b/views/index.mustache
@@ -40,7 +40,7 @@
           <input class="button" id="like" type="submit" name="" value="Like!">
         </div>
         <div class="username">
-          <span class="author">By:{{user}}</span>
+          <span class="author">By:   {{Username.username}}</span>
         </div>
         <div class="message">
           <span>{{body}}</span>
