logout button done

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -24,7 +24,7 @@
           {{/user}}
         </div>
         <div class="links">
-          <a href="/fixLink">Log Out</a>
+          <a href="/logout">Log Out</a>
         </div>
       </div>
       <div class="title">
