--- a/views/login.mustache
+++ b/views/login.mustache
@@ -25,7 +25,7 @@
         {{/user}}
       </div>
       <div class="links">
-        <a href="/fixLink">Log Out</a>
+        <a href="/logout">Log Out</a>
       </div>
     </div>
     <div class="title">
