--- a/views/loginError.mustache
+++ b/views/loginError.mustache
@@ -23,7 +23,7 @@
           {{/user}}
         </div>
         <div class="links">
-          <a href="/fixLink">Log Out</a>
+          <a href="/logout">Log Out</a>
         </div>
       </div>
       <div class="title">
