--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -32,11 +32,17 @@
     </div>
     <div class="body_wrapper">
       <h2>Sign Up!</h2>
+      {{#errors}}
+      <ul>
+        <li>{{msg}}</li>
+      </ul>
+      {{/errors}}
+
       <div class="login_wrapper">
         <form class="" action="/registerToDB" method="post">
           <div class="username_entry">
             <p>Chose a Username:</p>
-            <input type="text" class="login_fields" name="username" value="" placeholder="Username" autofocus>
+            <input type="text" class="login_fields" name="username" value="{{username}}" placeholder="Username" autofocus>
           </div>
           <div class="password_entry">
             <p>Password:</p>
@@ -44,7 +50,7 @@
           </div>
           <div class="password_entry">
             <p>Re-Enter Your Password:</p>
-            <input type="password" class="login_fields" name="passwordTwo" value="" placeholder="Re-Enter Your Password">
+            <input type="password" class="login_fields" name="passwordTwo" value="" placeholder="Confirm Password">
           </div>
 
             <button type="submit" class="login_button" name="button">Sign Up!</button>
