--- a/views/index.mustache
+++ b/views/index.mustache
@@ -39,7 +39,10 @@
       <div class="post_wrapper">
         <div class="top_line">
           <span class="post_title">{{title}}</span>
-          <input class="button" id="like" type="submit" name="" value="Like!">
+          <form class="" action="/{{id}}/likePost" method="post">
+            <button type="submit" value='{{id}}' name="like">Like!</button>
+          </form>
+          <a href="/{{id}}/postLikes">Link to Likes</a>
         </div>
         <div class="username">
           <span class="author">By:   {{Username.username}}</span>
