--- a/views/loginError.mustache
+++ b/views/loginError.mustache
@@ -16,7 +16,7 @@
         </div>
         <div class="links">
           {{#user}}
-          <a href="/fixme/profilepage">Logged in as {{user}}</a>
+          <a href="/{{userID}}/profilepage">Logged in as {{user}}</a>
           {{/user}}
           {{^user}}
           <a href="/login">Log in</a>
