--- a/views/profilePage.mustache
+++ b/views/profilePage.mustache
@@ -43,7 +43,7 @@
           <input class="button" id="like" type="submit" name="" value="Like!">
         </div>
         <div class="username">
-          <span class="author">By:   {{Username.username}}</span>
+          <span class="author">By:   {{username.username}}</span>
         </div>
         <div class="message">
           <span>{{body}}</span>
