--- a/views/logout.mustache
+++ b/views/logout.mustache
@@ -17,7 +17,7 @@
         </div>
         <div class="links">
           {{#user}}
-          <a href="/fixme/profilepage">Logged in as {{user}}</a>
+          <a href="/{{userID}}/profilepage">Logged in as {{user}}</a>
           {{/user}}
           {{^user}}
           <a href="/login">Log in</a>
