--- a/views/postLike.mustache
+++ b/views/postLike.mustache
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>{{title}}</title>
   </head>
   <body>
     <p>This is the page after you liked a post.</p>
