all features working and styled

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -44,12 +44,16 @@
           <input type="password" class="login_fields" name="password" value="" placeholder="Password">
         </div>
         <div class="login_buttons">
-          <button type="submit" class="login_button" name="button">Login</button>
+          <div class="login_submit">
+            <button type="submit" class="login_button" name="button">Login</button>
+          </div>
+      </form>
+      <div class="login_signUp">
+        <form class="button" action="/signUp" method="post">
+          <button type="submit" class="login_button" name="button">Sign Up!</button>
+      </div>
       </form>
       </div>
-      <form class="" action="/signUp" method="post">
-        <button type="submit" class="login_button" name="button">Sign Up!</button>
-      </form>
     </div>
   </div>
 
