--- a/views/loginError.mustache
+++ b/views/loginError.mustache
@@ -33,7 +33,7 @@
     <div class="body_wrapper">
       <div class="post_wrapper">
         <h2>Username and/or password is incorrect</h2>
-        <a href="/login">Go back to Login</a>
+        <a href="/login">Go back to Login</a><br />
         <a href="/signup">Sign up!</a>
 
       </div>
