--- a/views/logout.mustache
+++ b/views/logout.mustache
@@ -33,7 +33,7 @@
     </div>
 
     <div class="body_wrapper">
-      <div class="login_wrapper">
+      <div class="logout_wrapper">
           <div class="username_entry">
             <p>You have successfully logged out</p>
             <a href="/"><small>Return Home</small></a>
