--- a/public/css/master.css
+++ b/public/css/master.css
@@ -15,6 +15,7 @@ body{
 
 .links{
   padding: 1% 3%;
+  text-transform: capitalize;
 }
 a:link{
   color: rgba(93, 81, 121, 1);
@@ -45,6 +46,7 @@ a:visited{
   background-color:#ecf0f1;
   color:#2c3e50;
   padding:2%;
+  margin:2% 0%;
 }
 
 .body_wrapper{
@@ -58,16 +60,27 @@ a:visited{
   justify-content: space-between;
 }
 .button{
-  width:80px;
-  height: 100px;
+  width:93px;
+  height: 30px;
 }
 
 .post_title{
   font-size: 2rem;
+  padding-top:11px;
+}
+
+.like_stuff a{
+  font-size: 1.2rem;
+}
+
+.like_stuff img{
+  height:30px;
+  width:30px;
 }
 
 .author{
   font-size:1.3rem;
+  text-transform: capitalize;
 }
 
 .message{
@@ -128,6 +141,10 @@ a:visited{
   margin: 0% 31%;
 }
 
+.entry_wrapper li{
+  font-size: 1.2rem;
+}
+
 .entry_wrapper h2{
   font-size:1.5rem;
   margin:0px;
@@ -150,4 +167,38 @@ a:visited{
   color:#ecf0f1;
   width: 77px;
   height: 45px;
+}
+/*End of new post styles*/
+/*Start of Logout form styles*/
+
+.logout_wrapper{
+  padding:2%;
+  margin:0% 32%;
+  background-color:#ecf0f1;
+  color:#2c3e50
+}
+
+/*End of Logout form styles*/
+/*Start of signup form styles*/
+
+.signUp_wrapper{
+  padding:2%;
+  margin:0% 35%;
+  background-color:#ecf0f1;
+  color:#2c3e50;
+}
+
+.signUp_wrapper p {
+  margin:0%;
+  padding:0%;
+}
+
+.signUp_wrapper li{
+  font-size: 1.2rem;
+}
+
+.signUp_fields{
+  width:212px;
+  height: 35px;
+  font-size: 1rem;
 }
