--- a/views/index.mustache
+++ b/views/index.mustache
@@ -39,11 +39,19 @@
       <div class="post_wrapper">
         <div class="top_line">
           <span class="post_title">{{title}}</span>
-          <form class="" action="/{{id}}/likePost" method="post">
-            <button type="submit" value='{{id}}' name="like">Like!</button>
-          </form>
-          <a href="/{{id}}/postLikes">Link to Likes</a>
+          <div class="like_stuff">
+            {{#showLike}}
+            <img src="images/liked.png" alt="thumbs up"><br />
+            {{/showLike}}
+            {{^showLike}}
+            <form class="" action="/{{id}}/likePost" method="post">
+              <button type="submit" value='{{id}}' class="button" name="like">Like!</button>
+            </form>
+            {{/showLike}}
+            <a href="/{{id}}/postLikes">Likes: {{like.length}}</a>
+          </div>
         </div>
+
         <div class="username">
           <span class="author">By:   {{username.username}}</span>
         </div>
@@ -51,13 +59,15 @@
           <span>{{body}}</span>
         </div>
         <div class="bot_line">
-          <span class="publish_date">Published:</span> <span class="publishDateLong">{{createdAt}}</span>
+          <span class="publish_date">Published: <span class="publishDateLong">{{createdAt}}</span></span>
+          {{#showDel}}
           <form class="delForm" action="/{{id}}/deletePost" method="post">
-            <button type="submit" name="delButt" value='{{id}}'>Delete</button>
+            <button type="submit" name="delButt" class="button" value='{{id}}'>Delete</button>
           </form>
+          {{/showDel}}
         </div>
       </div>
-    {{/posts}}
+      {{/posts}}
   </div>
 
   <script src="/js/client.js" charset="utf-8"></script>
