--- a/views/postLike.mustache
+++ b/views/postLike.mustache
@@ -1,16 +1,81 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{title}}</title>
-  </head>
-  <body>
-    {{#likes}}
+
+<head>
+  <meta charset="utf-8">
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/css/master.css">
+</head>
+
+<body>
+  <div class="top-bar">
+    <div class="links-wrapper">
+      <div class="links">
+        <a href="/">Home</a>
+      </div>
+      <div class="links">
+        <a href="/newPost">Create New Post</a>
+      </div>
+      <div class="links">
+        {{#user}}
+          <a href="/{{userID}}/profilepage">Logged in as {{user}}</a>
+        {{/user}}
+        {{^user}}
+        <a href="/login">Log in</a>
+        {{/user}}
+      </div>
+      <div class="links">
+        <a href="/logout">Log Out</a>
+      </div>
+    </div>
+    <div class="title">
+      <h2>Gabble</h2>
+    </div>
+  </div>
+  <div class="body_wrapper">
+      <div class="post_wrapper">
+        <div class="top_line">
+          {{#likes}}
+          <span class="post_title">{{post.title}}</span>
+        </div>
+        <div class="username">
+          <span class="author">By:   {{user.username}}</span>
+        </div>
+        <div class="message">
+          <span>{{post.body}}</span>
+        </div>
+        <div class="bot_line">
+          <span class="publish_date">Published: <span class="publishDateLong">{{post.createdAt}}</span></span><br />
+          {{/likes}}
+        </div>
+        <div class="like_list">
+          Liked by:
+          {{#likes}}
+          <ul>
+            <li>{{user.username}}</li>
+          </ul>
+          {{/likes}}
+        </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+  <!-- {{#likes}}
     <p>This is the page after you liked a post. The title of the post you liked was: {{post.title}}</p>
     <p>The users that have liked this post</p>
     <ul>
       <li>{{user.username}}</li>
     </ul>
-    {{/likes}}
-  </body>
+  {{/likes}} -->
+</body>
+
 </html>
